# neural-network-gp-gpu

./: .gitignore  3d_gaussian_clusters.csv  CMakeLists.txt  Dockerfile  Makefile  a.out  backprop  backprop.cpp  backpropagation.cpp  config.json  definition.hpp  gaussian_clusters_shuffle.csv  helloworld  helloworld.cpp  main.cpp  notes.md  readme.md  todo.md  utils.cpp  winequality-red_scaled.csv
datasets/: Backpropagation.ipynb  life-expectancy-regression.ipynb  make_moons_small.csv  noisy_sinus.csv  who_life_expectancy_scaled.csv
datasets/classification/: 3d_gaussian_clusters.csv  moons.csv
libraries/include/: xtensor.hpp
models/04-11_training_1/: biases_layer_0.csv  biases_layer_1.csv  biases_layer_2.csv  loss.csv  weights_layer_0.csv  weights_layer_1.csv  weights_layer_2.csv
models/04-11_training_2/: biases_layer_0.csv  biases_layer_1.csv  biases_layer_2.csv  loss.csv  weights_layer_0.csv  weights_layer_1.csv  weights_layer_2.csv
models/04-11_training_3/: biases_layer_1.csv  biases_layer_2.csv  loss.csv  weights_layer_0.csv  weights_layer_1.csv  weights_layer_2.csv
models/gpu_mnist_autoencoder/: biases_0.csv  (+6 more)
notebooks/: wine.ipynb
src/: autoencoder.cpp  autoencoder.hpp  autoencoder_viz.cpp  cuda_members.cu  cuda_members.cuh  cuda_operations.cu  cuda_operations.cuh  cuda_utils.cu  cuda_utils.cuh  debugging_print_type.hpp  debugging_utils.cpp  debugging_utils.hpp  definition.hpp  former_main.cpp  gradient_descent.cpp  gradient_descent.cu  gradient_descent.cuh  gradient_descent.hpp  main.cpp  model.cpp  model.hpp  test.cpp  test.cu  utils.cpp  utils.hpp
(+22 files in other folders)
